[gd_scene load_steps=14 format=3 uid="uid://dtar038p00ygh"]

[ext_resource type="PackedScene" uid="uid://c0ygorgfy5hym" path="res://scenes/main_game.tscn" id="1_m86j5"]
[ext_resource type="Texture2D" uid="uid://fmftmcwhanja" path="res://assests/Bg.png" id="2_j5cyb"]
[ext_resource type="Script" path="res://scenes/main_game.gd" id="3_qxa8c"]
[ext_resource type="Script" path="res://scripts/game/player/controller.gd" id="4_xa28v"]
[ext_resource type="Script" path="res://scripts/game/player/player.gd" id="5_l0kaj"]
[ext_resource type="Script" path="res://scripts/game/player/ai_controller.gd" id="6_ecp3i"]
[ext_resource type="Script" path="res://scripts/game/ball/ball.gd" id="7_o6qc1"]
[ext_resource type="PackedScene" uid="uid://igftnsoo225g" path="res://scenes/ball_timer.tscn" id="8_j25ph"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynied"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mss64"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxu6m"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emvog"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rw4ml"]
size = Vector2(20, 647.5)

[node name="Game" type="Node2D"]

[node name="MainGame" parent="." instance=ExtResource("1_m86j5")]
position = Vector2(577, 324)
texture = ExtResource("2_j5cyb")
script = ExtResource("3_qxa8c")

[node name="Player1Controller" type="Node2D" parent="MainGame"]
script = ExtResource("4_xa28v")

[node name="Player" type="CharacterBody2D" parent="MainGame/Player1Controller"]
position = Vector2(-520, -60)
collision_mask = 0
script = ExtResource("5_l0kaj")

[node name="ColorRect" type="ColorRect" parent="MainGame/Player1Controller/Player"]
offset_right = 20.0
offset_bottom = 120.0
metadata/_edit_use_anchors_ = true

[node name="Colision" type="CollisionShape2D" parent="MainGame/Player1Controller/Player"]
position = Vector2(10, 60)
shape = SubResource("RectangleShape2D_ynied")

[node name="Player2Controller" type="Node2D" parent="MainGame"]
script = ExtResource("6_ecp3i")

[node name="Player" type="CharacterBody2D" parent="MainGame/Player2Controller"]
position = Vector2(520, -60)
collision_mask = 0
script = ExtResource("5_l0kaj")

[node name="ColorRect" type="ColorRect" parent="MainGame/Player2Controller/Player"]
offset_right = 20.0
offset_bottom = 120.0
metadata/_edit_use_anchors_ = true

[node name="Colision" type="CollisionShape2D" parent="MainGame/Player2Controller/Player"]
position = Vector2(10, 60)
shape = SubResource("RectangleShape2D_ynied")

[node name="BallController" type="Node2D" parent="MainGame"]

[node name="Ball" type="CharacterBody2D" parent="MainGame/BallController"]
collision_mask = 3
script = ExtResource("7_o6qc1")

[node name="BallRect" type="ColorRect" parent="MainGame/BallController/Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="BallColisiton" type="CollisionShape2D" parent="MainGame/BallController/Ball"]
shape = SubResource("RectangleShape2D_mss64")

[node name="Borders" type="StaticBody2D" parent="MainGame"]
collision_layer = 2

[node name="Top" type="CollisionShape2D" parent="MainGame/Borders"]
position = Vector2(0, -334)
shape = SubResource("RectangleShape2D_oxu6m")

[node name="Bot" type="CollisionShape2D" parent="MainGame/Borders"]
position = Vector2(0, 334)
shape = SubResource("RectangleShape2D_emvog")

[node name="ScoreLeft" type="Area2D" parent="MainGame"]
position = Vector2(-576, -324)

[node name="ScoreLeftColision" type="CollisionShape2D" parent="MainGame/ScoreLeft"]
position = Vector2(-10, 324.25)
shape = SubResource("RectangleShape2D_rw4ml")

[node name="ScoreRight" type="Area2D" parent="MainGame"]
position = Vector2(-576, -324)

[node name="ScoreRightColision" type="CollisionShape2D" parent="MainGame/ScoreRight"]
position = Vector2(1162, 324)
shape = SubResource("RectangleShape2D_rw4ml")

[node name="Hud" type="CanvasLayer" parent="MainGame"]

[node name="Player1Score" type="Label" parent="MainGame/Hud"]
offset_left = 524.0
offset_top = 9.0
offset_right = 564.0
offset_bottom = 32.0
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2Score" type="Label" parent="MainGame/Hud"]
offset_left = 591.0
offset_top = 9.0
offset_right = 631.0
offset_bottom = 32.0
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" parent="MainGame" instance=ExtResource("8_j25ph")]

[connection signal="body_entered" from="MainGame/ScoreLeft" to="MainGame" method="_on_score_left_body_entered"]
[connection signal="body_entered" from="MainGame/ScoreLeft" to="MainGame/BallController/Ball" method="_on_score_left_body_entered"]
[connection signal="body_entered" from="MainGame/ScoreRight" to="MainGame" method="_on_score_right_body_entered"]
[connection signal="body_entered" from="MainGame/ScoreRight" to="MainGame/BallController/Ball" method="_on_score_right_body_entered"]
[connection signal="timeout" from="MainGame/BallTimer" to="MainGame" method="_on_ball_timer_timeout"]
